# pai

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: build-base-image.yml  build-image.yml
_base/_scripts/: apt-install-python3-dev.sh  create-docker-user.sh
_base/intel/: Dockerfile  docker-compose.example.yml
_base/pytorch-ipex/: Dockerfile  docker-compose.example.yml
_base/pytorch-rocm/: Dockerfile  docker-compose.example.yml
_base/rocm/: Dockerfile
_base/vulkan/: Dockerfile  docker-compose.example.yml
apps/_base/: README.md  docker-compose.build.yml
apps/comfyui/: README.md  docker-compose.build.yml
apps/koboldcpp/: README.md  docker-compose.build.yml
apps/llama.cpp/: README.md
apps/ollama/: README.md
base/: README.md
base/blas-rocm/: docker-compose.example.yml
base/intel/: Dockerfile  docker-compose.example.yml
base/pytorch-ipex/: .image-version  Dockerfile  docker-compose.example.yml
base/pytorch-rocm/: Dockerfile  docker-compose.example.yml
base/rocm/: .image-version  Dockerfile
comfyui/: README.md
comfyui/ipex/: .image-version  Dockerfile  docker-compose.example.yml
comfyui/rocm/: .image-version  Dockerfile  docker-compose.example.yml
common/scripts/: apt-add-intel-repo.sh  apt-install-build-essential.sh  apt-install-hipblas-dev.sh  apt-install-ipex-deps.sh  apt-install-python3-dev.sh  apt-install-python3-minimal.sh  apt-install-rocminfo-deps.sh  apt-install-rocminfo.sh  (+6 more)
helpers/: pyproject.toml
helpers/src/pai_helpers/: __main__.py
koboldcpp/: README.md
ollama/: README.md
pytorch/: README.md
(+82 files in other folders)
