[project]
name = "pai-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
paictl = "pai_helpers.__main__:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"
